data/derived/comb/progs/unify/prog4293.ml.out
Characters 38-41:
  let fixpoint (f,b) = wwhile(wwhile(f, f b)),b;;
                                        ^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a * bool
